# 2024-I

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ADA/: Countingsort.cpp  MatrixMultiply.cpp  exchangeCoins.cpp  firstMissingNumber.cpp
CPC/: B.cpp  C.cpp  D.cpp  F.cpp  H.cpp  I.cpp  I.py
CPC/1508-TCUTEC/: A.cpp  B.cpp  C.cpp  H.cpp  K.cpp  a.out  input.txt
CPC/CSES/DP/: DiceCombination.cpp
CPC/biagioli/: p1.cpp
CPC/biagioli/S1/: p2.cpp
CPC/biagioli/S2/: a.cpp
CPC/selfTraining/: SubarraySums.cpp  a.cpp
Codeforces/: B.cpp  cows.cpp  sol.cpp
Codeforces/CPC/S2/: B.cpp  C.cpp
Codeforces/CPC/S4/: A.cpp  C.cpp
Codeforces/Contest/: p1.cpp  p2.cpp
Compi/S1/: lab1.1.cpp  lab1.2.cpp  lab1.2_sol.cpp  lab1.cpp  p01.sml  p02.sml  p03.sml  svm0.cpp  svm0_sol.cpp
Compi/S10/lab10.1/: Makefile  Makefile~  ejemplo11.imp  ejemplo22.imp.sm  ejemplo222.imp  ejemplo44.imp  env_test.cpp  imp  imp.cpp  imp.hh  imp_interpreter.cpp  imp_interpreter.hh  imp_parser.cpp  imp_parser.hh  imp_printer.cpp  imp_printer.hh  imp_test.cpp  imp_typechecker.cpp  svm.hh  (+9 more)
Compi/S13/Lab13-solucion1/: CMakeLists.txt  ejemplo4.imp  ejemplo_main.imp  ejemplo_suma.imp  imp.cpp  imp.hh  imp_interpreter.cpp  imp_interpreter.hh  imp_parser.cpp  imp_printer.cpp  imp_printer.hh  imp_typechecker.cpp  imp_typechecker.hh  imp_value.cpp  imp_value.hh  imp_value_visitor.hh  imp_visitor.hh  run.bat  test_imp_fun.cpp  type_visitor.hh
Compi/S2/: automata.cpp  lab2.cpp  scanner_aexp.cpp  scanner_aexp_automaton.cpp  scanner_relop.cpp  scanner_svm.cpp
Compi/S3/: lab3-2.cpp  lab3-2_sol.cpp
Compi/S4/: Pruebita4.cpp  lab42sol.cpp  parseer_prueba_semana4.cpp  prueba4.cpp
Compi/S5/: lab4_imp.cpp
Compi/S6/: ast.h  calc.l  calc.y  ejemplo.txt  grammar.y  main.cpp  parser.cpp  run (1).sh  run.bat  run.sh  scanner.h
Compi/S8/TestLab7/: CMakeLists.txt  environment.cpp  environment.hh  gramatica.md  imp.cpp  imp.hh  imp_interpreter.cpp  imp_interpreter.hh  imp_parser.cpp  imp_parser.hh  imp_printer.cpp  imp_printer.hh  imp_test.cpp  imp_visitor.hh
DBII/S1/: archivo.txt  archivos.cpp
DBII/S12/: lab12.sql
DBII/S13/: Lab13.sql
DBII/S14/: lab13.2.sql
DBII/S15/: Vilchez_lab14.sql  db_faker.py  db_remote.py  docker-compose.yml  docker-compose_p2.yml  lab14.sql  lab15.sql  lab15_v2.sql  lab15_v3.sql  labExtra.sql  requirements.txt
DBII/S2/: FixedRecord.cpp  VariableRecord.cpp  p1.cp
DBII/S3/: isam.txt
DBII/S4/: HashFile.h  datos.txt  main.cpp  muchosdatos.txt
DBII/S7/: Laboratorio 6.1.ipynb  Laboratorio 6.2.ipynb  avl.cpp  incidence_matrix.csv
DBII/S8/: Laboratorio 7.1.ipynb  Laboratorio 7.2.ipynb  retrieve.py
DBII/S9/: labs9.sql
DBP-TA/Coevaluación/: coevaluacion.ipynb  coevaluacion.py  tempCodeRunnerFile.py
DBP-TA/S1/: lab1.py  main.py  test_lab1.py
DBP-TA/s11_pc2/: package-lock.json
DBP-TA/s14_random/: grupos_aleatorios.py
DBP-TA/s4_test_async/: test.py
(+408 files in other folders)
